# sintel_stereo_publisher

./: CMakeLists.txt  README.md  package.xml
docker/: .env  Dockerfile  docker-compose.yml
include/: sintel_stereo_publisher.h
msg/: SintelInfo.msg
src/: sintel_stereo_publisher.cpp  sintel_stereo_publisher_node.cpp
